--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,8 +14,17 @@ body{
 .centered{
     text-align: center;
 }
-a:hover, a:focus{
+.navbar-nav > li > a:focus{
     border-bottom: 6px solid #8cbae8;
+    text-decoration: none;
+    outline: 0;
+}
+.navbar-nav > li > a:hover{
+    border-bottom: 6px solid #8cbae8;
+    text-decoration: none;
+    outline: 0;
+}
+a:hover, a:focus{
     text-decoration: none;
     outline: 0;
 }
@@ -62,11 +71,16 @@ ul {
     width: 104.7px;
     height: 60px;
 }
+.navbar-brand:hover{
+   border: none;
+}
+.navbar-brand:focus{
+    border: none;
+}
 .logo-img{
-    width: 88px;
-    heigh: 68px;
+    width: 96px;
     position: absolute;
-    top: 0px;
+    top: -3px;
     left: 10px;
 }
 .navbar-collapse{
@@ -93,7 +107,7 @@ ul {
 }
 .envelope{
     position: relative;
-    top: 4px;
+    top: 6px;
     right: 34px;
 }
 .circle-envelope{
@@ -111,87 +125,6 @@ ul {
     top: -15px;
     right: 8px;
 }
-.Claims-search {
-    width: 132px;
-    height: 24px;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: bold;
-    text-align: left;
-    color: #3b3b48;
-    margin-bottom: 20px;
-  }
-.Claims-search:hover{
-    width: 132px;
-    height: 24px;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: bold;
-    text-align: left;
-    color: #36363f;
-}
-.Claims-search:focus{
-    width: 132px;
-    height: 24px;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: bold;
-    text-align: left;
-    color: #36363f;
-}
-  .Recent-search-result {
-    width: 196px;
-    height: 24px;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: bold;
-    text-align: left;
-    color: #3b3b48;
-  }
-.input-wrap{
-    display: flex;
-    justify-content: space-between;
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-bottom: 32px;
-}
-.button-wrap-top{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 22px;
-    padding: 0 40px;
-}
-.input > input{
-    border: none;
-    border-bottom: solid 1px rgba(0, 0, 0, 0.24);
-    width: 265px;
-    outline: none;
-}
-
-.clip{
-    width: 160px;
-    height: 35px;
-    border-radius: 3px;
-    background-color: #1976d2;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
-    border: none;
-    font-family: Roboto;
-    font-size: 16px;
-    text-align: center;
-    color: #ffffff;
-}
-.Advanced-search{
-    border: none;
-    background: none;
-    color: aliceblue;
-    width: 130px;
-    height: 18px;
-    font-family: MarkPro;
-    font-size: 14px;
-    font-weight: bold;
-    text-align: left;
-    color: #1976d2;  
-}
 
 .Rectangle-3{
     height: 168px;
@@ -201,147 +134,16 @@ ul {
     padding-bottom: 47px;
 }
 .main-wrap{
-    margin-top: 70px;
-    margin-right: 13%;
+    margin-top: 70px !important;
     width: 973px;
+    position: relative;
+    right: 50% !important;
+    margin-right: -480px !important;
 }
 .bot-content-header{
     display: flex;
     justify-content: space-between;
     padding: 22px 83px 22px 23px;
-}
-
-.tcn{
-    width: 120px;
-    margin-right: 37px;
-    height: 16px;
-    font-family: Roboto;
-    font-size: 14px;
-    text-align: left;
-    color: rgba(0, 0, 0, 0.54);
-}
-.service-period{
-    width: 142px;
-    height: 16px;
-    font-family: Roboto;
-    font-size: 14px;
-    text-align: left;
-    color: rgba(0, 0, 0, 0.54);
-    position: relative;
-    right: 24px;
-}
-.claim-status{
-    width: 79px;
-    height: 16px;
-    font-family: Roboto;
-    font-size: 14px;
-    text-align: left;
-    color: rgba(0, 0, 0, 0.54);
-}
-.total-charged-amount{
-    width: 89px;
-    height: 32px;
-    font-family: Roboto;
-    font-size: 14px;
-    text-align: right;
-    color: rgba(0, 0, 0, 0.54);
-    margin-right: 28px;
-}
-.member-name{
-    width: 91px;
-    height: 16px;
-    font-family: Roboto;
-    font-size: 14px;
-    text-align: left;
-    color: rgba(0, 0, 0, 0.54);
-    margin-right: 39px;
-    position: relative;
-    left: 22px;
-}
-.bot-content:last-child{
-    margin-bottom: 86px;
-}
-.member-id{
-    width: 69px;
-    height: 16px;
-    font-family: Roboto;
-    font-size: 14px;
-    text-align: left;
-    color: rgba(0, 0, 0, 0.54);
-    position: relative;
-    left: 7px;
-}
-.bot-content-item{
-    display: flex;
-    justify-content: space-between;
-    padding: 22px 21px 22px 23px;
-    height: 60px;
-    background-color: #ffffff;
-    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.12);
-    border: solid 1px #d8dde0;
-    margin-bottom: 9px;
-}
-.number{
-    width: 120px;
-    height: 15px;
-    font-family: Roboto;
-    font-size: 13px;
-    font-weight: bold;
-    text-align: right;
-    color: rgba(0, 0, 0, 0.87);
-    margin-right: 44px;
-}
-.date-period{
-    width: 188px;
-    height: 19px;
-    font-family: Roboto;
-    font-size: 13px;
-    line-height: 1.46;
-    text-align: left;
-    color: rgba(0, 0, 0, 0.87);
-    margin-right: 22px;
-}
-.p-paid{
-    width: 41px;
-    height: 15px;
-    font-family: Roboto;
-    font-size: 13px;
-    font-weight: 500;
-    text-align: left;
-    color: #40a33f;
-    margin-right: 104px;
-}
-.cost{
-    width: 48px;
-    height: 15px;
-    font-family: Roboto;
-    font-size: 13px;
-    text-align: right;
-    color: rgba(0, 0, 0, 0.87);
-    margin-right: 81px;
-}
-.stan-stone{
-    width: 68px;
-    height: 15px;
-    font-family: Roboto;
-    font-size: 13px;
-    text-align: left;
-    color: rgba(0, 0, 0, 0.87);
-    margin-right: 78px;
-}
-.member-name-item{
-    width: 59px;
-    height: 15px;
-    font-family: Roboto;
-    font-size: 13px;
-    text-align: left;
-    color: rgba(0, 0, 0, 0.87);
-    margin-right: 41px;
-}
-.icon-print{
-    width: 20px;
-    height: 18px;
-    color: #757575;
 }
 .footer-content{
     display: flex;
@@ -377,7 +179,27 @@ ul {
     text-align: left;
     color: #bdbdbd;
 }
-
+.comment-button > button{
+    position: fixed;
+    bottom: 32px;
+    right: 34px;
+    width: 64px;
+    height: 64px;
+    border-radius: 50px;
+    border: none;
+    background-color: #ff9800;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    outline: none;
+}
+.comment-button > button:focus{
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.26), 0 1px 1px 0 rgba(0, 0, 0, 0.16);
+}
+.comment-button > button > img{
+    width: 34px;
+}
+.back-to-claims{
+    outline: none;
+}
 @media screen and (max-width: 1246px){
     .navbar-collapse > ul > li > a{
         color: white;
@@ -419,5 +241,13 @@ ul {
     }
     .navbar-nav{
         right: 428px;
+    }
+    .main-wrap{
+        margin-top: 70px !important;
+        width: 973px;
+        position: relative;
+        right: 20px !important;
+        margin-right: 20px !important;
+        margin-left: 20px !important;
     }
 }
