--- a/public/css/05_iu_claim_lineitem_01.css
+++ b/public/css/05_iu_claim_lineitem_01.css
@@ -1,4 +1,11 @@
-
+.navbar-nav {
+    position: absolute;
+    right: -9% !important;
+    line-height: 1.44;
+    top: 14px;
+    width: 116%;
+    padding-left: 64px;
+}
 .logo-img{
     width: 139px;
     position: absolute;
@@ -213,8 +220,10 @@
     background-color: rgba(255, 152, 0, 0.1);
     border-left: 5px solid #ffa000;
     padding-left: 51px;
+    color: black;
+    font-weight: bolder;
 }
-.menu-wrapper > button > span{
+.menu-wrapper > button{
     font-family: Roboto;
     font-size: 15px;
     font-weight: 500;
@@ -396,12 +405,14 @@ margin-top: 22px;
         color: white;
         margin-left: 16px;
         margin-right: 26px;
-    }
-    .navbar-nav{
+    }  
+    .navbar-nav {
         position: absolute;
-        right: 385px;
+        right: -13% !important;
         line-height: 1.44;
-        top: 21px;
+        top: 14px;
+        width: 116%;
+        padding-left: 64px;
     }
 }
 @media screen and (max-width: 1246px){
@@ -415,7 +426,15 @@ margin-top: 22px;
     .navbar-collapse > ul > li > a{
         color: white;
         margin-left: 6px;
-        margin-right: 26px;
+        margin-right: 19px;
+    }
+    .navbar-nav {
+        position: absolute;
+        right: -13% !important;
+        line-height: 1.44;
+        top: 14px;
+        width: 116%;
+        padding-left: 64px;
     }
 }
 @media screen and (max-width: 1161px){
