--- a/public/css/05_ss_claim_confirm_04.css
+++ b/public/css/05_ss_claim_confirm_04.css
@@ -208,8 +208,10 @@
     background-color: rgba(255, 152, 0, 0.1);
     border-left: 5px solid #ffa000;
     padding-left: 51px;
+    color: black;
+    font-weight: bolder;
 }
-.menu-wrapper > button > span{
+.menu-wrapper > button{
     font-family: Roboto;
     font-size: 15px;
     font-weight: 500;
@@ -401,3 +403,8 @@ margin-top: 22px;
     flex-flow: column;
 }
 .show {display:block;}
+
+
+.togglebot{
+    display: none;
+}
