--- a/public/css/05_ss_claim_search_01.css
+++ b/public/css/05_ss_claim_search_01.css
@@ -1,4 +1,9 @@
 
+.arrow-advanced-search{
+    position: relative;
+    top: 9px;
+    right: 4px;
+}
 .icon-date{
     width: 18px;
     height: 20px;
@@ -84,7 +89,7 @@
     border: none;
     background: none;
     color: aliceblue;
-    width: 130px;
+    width: 144px;
     height: 18px;
     font-family: MarkPro;
     font-size: 14px;
@@ -221,13 +226,13 @@
     margin-right: 81px;
 }
 .stan-stone{
-    width: 68px;
+    width: 108px;
     height: 15px;
     font-family: Roboto;
     font-size: 13px;
     text-align: left;
     color: rgba(0, 0, 0, 0.87);
-    margin-right: 78px;
+    margin-right: 38px;
 }
 .member-name-item{
     width: 59px;
