--- a/public/css/05_ss_claim_confirm_03.css
+++ b/public/css/05_ss_claim_confirm_03.css
@@ -199,8 +199,10 @@
     background-color: rgba(255, 152, 0, 0.1);
     border-left: 5px solid #ffa000;
     padding-left: 51px;
+    color: black;
+    font-weight: bolder;
 }
-.menu-wrapper > button > span{
+.menu-wrapper > button{
     font-family: Roboto;
     font-size: 15px;
     font-weight: 500;
