--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 body{
-    background-color: rgb(255, 255, 255);
+    background-color: #fbfbfb;;
     font-weight: 300;
     font-size: 16px;
     color: rgb(0, 0, 0);
     -webkit-overflow-scrolling: touch;
+}
+.right-content-wrapp{
+    background: white;
 }
 .navbar{
     background: #1976d2;
@@ -18,6 +21,18 @@ body{
     border-bottom: 6px solid #8cbae8;
     text-decoration: none;
     outline: 0;
+}
+.active-header-menu{
+    border-bottom: 6px solid #8cbae8;
+    text-decoration: none;
+    outline: 0;
+}
+.active-menu-bottom-content{
+    background-color: rgba(255, 152, 0, 0.1) !important;
+    border-left: 5px solid #ffa000 !important;
+    padding-left: 51px !important;
+    color: black !important;
+    font-weight: bolder;
 }
 .navbar-nav > li > a:hover{
     border-bottom: 6px solid #8cbae8;
@@ -77,6 +92,9 @@ ul {
 .navbar-brand:focus{
     border: none;
 }
+.hr{
+    border-top: 2px dotted #e6e6e6;
+}
 .logo-img{
     width: 96px;
     position: absolute;
@@ -86,12 +104,14 @@ ul {
 .navbar-collapse{
     width: 61%;
     margin-top: 6px;
+    position: relative;
 }
 .navbar-nav{
     position: absolute;
-    right: 464px;
+    right: -9%;
     line-height: 1.44;
-    top: 21px;
+    top: 15px;
+    width: 116%;
 }
 .email-nav{
     position: absolute;
@@ -226,10 +246,7 @@ ul {
         color: white;
         margin-left: 8px;
         margin-right: 8px;
-        right: 428px;
-    }
-    .navbar-nav{
-        right: 428px;
+       
     }
 }
 @media screen and (max-width: 1050px){
@@ -238,9 +255,6 @@ ul {
         margin-left: 8px;
         margin-right: 8px;
         
-    }
-    .navbar-nav{
-        right: 428px;
     }
     .main-wrap{
         margin-top: 70px !important;
