--- a/public/css/05_iu_claim_lineitem_01.css
+++ b/public/css/05_iu_claim_lineitem_01.css
@@ -399,6 +399,12 @@ margin-top: 22px;
     display: flex;
     flex-flow: column;
 }
+.row-fluid{
+    position: absolute;
+    bottom: 0;
+    left: -93px;
+
+}
 .show {display:block;}
 
 
