--- a/public/css/main.css
+++ b/public/css/main.css
@@ -168,6 +168,7 @@ ul {
 .footer-content{
     display: flex;
     justify-content: center;
+    margin-bottom: 10px;
 }
 .massage-fotter{
     width: 181px;
