--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@-webkit-keyframes appear {
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes appear {
+    100% {
+      opacity: 1;
+    }
+  }
 body{
     background-color: #fbfbfb;;
     font-weight: 300;
@@ -221,6 +232,42 @@ ul {
 .back-to-claims{
     outline: none;
 }
+input:focus {
+    outline: 0;
+  }
+  input.question{
+    font-size: 12px;
+    font-weight: 400;
+    border: none;
+    width: 100%;
+    background: rgba(0, 0, 0, 0);
+    padding-bottom: 6px;
+    font-size: 16px;
+    letter-spacing: -0px;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.9);
+    font-family: Roboto
+  }
+  input.question:focus + label > span,
+  input.question:valid + label > span {
+    top: -50px;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.4);
+  }
+  input.question + label > span{
+    font-weight: 300;
+    margin: 0;
+    position: absolute;
+    color: #8F8F8F;
+    font-size: 16px;
+    top: -26px;
+    left: 0px;
+    z-index: 0;
+    -webkit-transition: top 0.2s ease, font-size 0.2s ease, color 0.2s ease;
+    transition: top 0.2s ease, font-size 0.2s ease, color 0.2s ease;
+  }
+
+
 @media screen and (max-width: 1246px){
     .navbar-collapse > ul > li > a{
         color: white;
