--- a/public/css/ss_payment_02.css
+++ b/public/css/ss_payment_02.css
@@ -207,6 +207,7 @@
     border-bottom: 1px solid #e0e0e0;
     border-top: 4px solid #0288d1 ;
     margin-bottom: 32px;
+    padding-right: 0;
 
 }
 .caption{
