--- a/public/css/02_ss_elig_01.css
+++ b/public/css/02_ss_elig_01.css
@@ -21,7 +21,7 @@
     position: relative;
 }
 .from-date-wrap{
-    margin-right: 20px
+    margin-right: 32px;
 }
 .check-eligibility {
     width: 144px;
