--- a/public/css/iu_1099_full_01.css
+++ b/public/css/iu_1099_full_01.css
@@ -150,7 +150,7 @@ body{
     color: #3b3b48;
 }
 .main-wrap{
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     padding-left: 0;
     padding-right: 0;
 }
@@ -207,6 +207,29 @@ body{
 .npi{
     margin-right: 24px;
 }
+.footer-main-wrapper{
+    position: fixed;
+    bottom: 5px;
+    left: 50%;
+    margin-left: -585px;
+}
+.footerPosition2014{
+    position: relative !important;
+    bottom: 5px;
+    left: 0 !important;
+    margin-left: 47px !important;
+}
+.footerPosition2015{
+    position: relative !important;
+    bottom: 5px;
+    left: 0 !important;
+    margin-left: 47px !important;
+}.footerPosition2016{
+    position: relative !important;
+    bottom: 5px;
+    left: 0 !important;
+    margin-left: 47px !important;
+}
 @media screen and (max-width: 1300px){
     .navbar-collapse > ul > li > a{
         color: white;
@@ -248,7 +271,12 @@ body{
         width: 131%;
         padding-left: 64px;
     }
-  
+    .footer-main-wrapper{
+        position: fixed;
+        bottom: 5px;
+        left: 60%;
+        margin-left: -585px;
+    }
 }
 @media screen and (max-width: 1199px){
     .navbar-collapse > ul > li > a{
