--- a/public/css/ss_auth_confirm_02.css
+++ b/public/css/ss_auth_confirm_02.css
@@ -158,7 +158,7 @@
     display: flex;
     margin-top: 32px;
     width: 100%;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
     border-bottom: 1px solid #e0e0e0;
     border-top: 1px solid #e0e0e0;
 }
@@ -398,4 +398,8 @@
 .btn-back{
     margin-top: 40px;
     margin-bottom: 10px;
+}
+.footer-content{
+    margin-bottom: 30px !important;
+    margin-top: 20px !important;
 }
