--- a/public/css/ss_payment_01.css
+++ b/public/css/ss_payment_01.css
@@ -30,7 +30,7 @@ input.question + label{
     position: relative;
 }
 .from-date-wrap{
-    margin-right: 20px
+    margin-right: 32px;
 }
 .check-eligibility {
     width: 169px;
@@ -242,6 +242,10 @@ input.question + label{
     position: absolute;
     top: 1px;
     right: 0;
+}
+.footer-content{
+    margin-bottom: 30px !important;
+    margin-top: 20px !important;
 }
 @media screen and (max-width: 1246px){
     .navbar-collapse > ul > li > a{
