--- a/public/css/ss_payment_02.css
+++ b/public/css/ss_payment_02.css
@@ -164,7 +164,7 @@
     display: flex;
     margin-top: 32px;
     width: 100%;
-    margin-bottom: 50px;
+
     flex-flow: column;
 }
 .claim-codes{
@@ -206,7 +206,7 @@
     background: white;
     border-bottom: 1px solid #e0e0e0;
     border-top: 4px solid #0288d1 ;
-    margin-bottom: 32px;
+    margin-bottom: 10px;
     padding-right: 0;
 
 }
@@ -285,4 +285,8 @@
 }
 .financial{
     padding-right: 0;
+}
+.footer-content{
+    margin-bottom: 30px !important;
+    margin-top: 20px !important;
 }
