--- a/public/assets/scss/mixins/_breakpoints.scss
+++ b/public/assets/scss/mixins/_breakpoints.scss
@@ -11,6 +11,7 @@ $breakpoints: (
     lt-md: 'screen and (max-width: 959px)',
     lt-md-mid: 'screen and (max-width: 1179px)',
     lt-lg: 'screen and (max-width: 1279px)',
+    max-1220: 'screen and (max-width: 1220px)',
     lt-xl: 'screen and (max-width: 1919px)',
     gt-xs: 'screen and (min-width: 600px)',
     gt-sm: 'screen and (min-width: 960px)',
