--- a/public/assets/scss/global.scss
+++ b/public/assets/scss/global.scss
@@ -129,13 +129,14 @@ button {
   text-shadow: 0 0 2px black !important;
 }
 .bg-modal {
-  background: rgba(0, 0, 0, 0.61);
+  background: rgba(0, 0, 0, 0.1);
   overflow-y: auto;
   position: fixed;
   width: 100%;
   height: 100%;
   z-index: 11;
   top: 0;
+  left: 0;
 }
 .modal {
   width: 100%;
@@ -149,6 +150,7 @@ button {
     width: 100%;
     height: 100%;
     z-index: 11;
+    left: 0;
     top: 0;
     .modal-body {
       pointer-events: all;
@@ -175,7 +177,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  &.bg-gray{
+  &.bg-gray {
     background: rgba(204, 204, 204, 1);
   }
 }
@@ -216,4 +218,7 @@ button {
   color: #ffe999 !important;
   text-shadow: 0 0 2px black !important;
   font-size: 15px;
+}
+.color-dark {
+  color: #1e1e1e;
 }
